updated wrapper files

--- a/build.gradle
+++ b/build.gradle
@@ -27,6 +27,9 @@ dependencies {
     // Use JUnit test framework
     testImplementation 'junit:junit:4.12'
 }
+task wrapper(type: Wrapper) {
+    gradleVersion = '1.4'
+}
 
 jar{
   manifest{
